tidied up code and fixed overlap within priority on mob

--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,6 @@
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   margin: 5px;
-  /*background:
-  url("teal_background.jpg") bottom center no-repeat,
-  url("teal_background.jpg") repeat;*/
   background: url(blue_wish_background.jpg) no-repeat center fixed;
     background-size: cover;
   color: rgb(3, 57, 109);
@@ -22,18 +19,12 @@ body {
 
 .blue-rect {
   height: 350px;
-  /*background-color: rgb(137, 214, 214);
-  border: 2px solid rgb(27, 83, 185);*/
 }
 .green-rect {
   height: 25px;
-  /*background-color: rgb(193, 235, 224);
-  border: 1px solid black;*/
 }
 .yellow-rect {
   height: 100px;
-  border: 1px solid rgb(190, 190, 190);
-
 }
 .brightgreen-rect {
   height: 154px;
@@ -41,8 +32,6 @@ body {
   border: 2px solid rgb(132, 231, 3);
 }
 .header {
-  /*background:  rgb(137, 214, 214);
-  border: 1px solid rgb(63, 15, 196);*/
   text-align: center;
   font-size: 25pt;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
